--- a/Projeto-AluguelIates/index.html
+++ b/Projeto-AluguelIates/index.html
@@ -8,16 +8,20 @@
 </head>
 <body>
     <div id="header">
-        <h1>Luxo</h1>
-        <img src="imagens/barco1.png"></img>
-        <p id="header">Aluguel de Iates</p>
-        <ul>
-            <li><a href="index.html">PÁGINA INICIAL</a></li>
-            <li><a href="aluguel_de_iates.html">ALUGUEL DE IATES</a></li>
-            <li><a href="destinos.html">DESTINOS</a></li>
-            <li><a href="tripulacao.html">TRIPULAÇÃO</a></li>
-            <li><a href="contato.html">CONTATO</a></li>
-        </ul>
+        <div id="header-logo">
+            <h1>Luxo</h1>
+            <img src="imagens/barco1.png"></img>
+            <p id="header">Aluguel de Iates</p>
+        </div>
+        <div id="hearder-menu">
+            <ul>
+                <li><a href="index.html">PÁGINA INICIAL</a></li>
+                <li><a href="aluguel_de_iates.html">ALUGUEL DE IATES</a></li>
+                <li><a href="destinos.html">DESTINOS</a></li>
+                <li><a href="tripulacao.html">TRIPULAÇÃO</a></li>
+                <li><a href="contato.html">CONTATO</a></li>
+            </ul>
+        </div>    
     </div>
     <div id="image-body">
         <img src="imagens/barcoprincipal.jpg"></img>
